# pybhpt

./: .gitignore  .gitmodules  .readthedocs.yml  CITATION.cff  CMakeLists.txt  README.md  build_gsl.sh  dev_compile.sh  environment-basic.yml  environment-extended.yml  environment.yml  geo.py  install-vanilla.sh  install-vcpkg.sh  pyproject-vanilla.toml  pyproject-vcpkg.toml  pyproject.toml  readthedocs.yml  setup.py  tutorial.ipynb  vcpkg.json
.github/workflows/: .build-package.yml
cpp/include/: bessel.hpp  cf.hpp  fluxes.hpp  geo.hpp  gsn_asymp.hpp  hertz.hpp  hypergeo_f.hpp  hypergeo_u.hpp  inspiral.hpp  kerr.hpp  metric.hpp  metriccoeffs.hpp  modesol.hpp  monodromy.hpp  mst.hpp  nusolver.hpp  perturbations.hpp  radialsolver.hpp  redshift.hpp  regularization.hpp  resflux.hpp  sourceintegration.hpp  specialfunc.hpp  ssf.hpp  swsh.hpp  test.hpp  teukolsky.hpp  unit_test.hpp  utils.hpp  waveform.hpp
cpp/src/: bessel.cpp  cf.cpp  fluxes.cpp  geo.cpp  gsn_asymp.cpp  hertz.cpp  hypergeo_f.cpp  hypergeo_u.cpp  inspiral.cpp  kerr.cpp  main.cpp  metric.cpp  metriccoeffs.cpp  monodromy.cpp  mst.cpp  nusolver.cpp  radialsolver.cpp  redshift.cpp  regularization.cpp  resflux.cpp  sourceintegration.cpp  specialfunc.cpp  ssf.cpp  swsh.cpp  test.cpp  teukolsky.cpp  unit_test.cpp  utils.cpp  waveform.cpp
cython/: flux_wrap.pyx  geo_wrap.pyx  radialsolver_wrap.pyx  redshift_wrap.cpp  redshift_wrap.pyx  swsh_wrap.pyx  teukolsky_wrap.cpp  teukolsky_wrap.pyx
dev/: metricReconstruction.ipynb  metric_construction.ipynb  redshift.ipynb  test.ipynb  tutorial.ipynb
dev/eccCalc/: ecc_script.py  redshift_a{}_p{}_e{}_IRG.npy  redshift_a{}_p{}_e{}_ORG.npy  redshift_a{}_p{}_e{}_SAAB.npy
dev/genAttempt/: huuGenParallel.py  huuGenParallel_0.py  huuGenParallel_1.py  huuGenParallel_2.py  huuGenParallel_3.py  huuGenParallel_4.py
dev/munnaData/: redshift_a25_p10_e10.npy  redshift_a25_p20_e10.npy  redshift_a25_p20_e40.npy  redshift_a25_p20_e40_plus.npy  redshift_a50_p10_e10.npy  redshift_a50_p20_e10.npy  redshift_a50_p20_e40.npy  redshift_a50_p20_e40_minus.npy  redshift_a50_p20_e40_plus.npy  redshift_a90_p10_e10.npy  redshift_a90_p20_e10.npy  redshift_a90_p20_e40.npy  redshift_calc_munna_0.py  redshift_calc_munna_1.py  redshift_calc_munna_2.py  redshift_vals.txt
docs/: Makefile  about.md  conf.py  index.md  installation.md  pybhpt.flux.md  pybhpt.geo.md  pybhpt.hertz.md  pybhpt.metric.md  pybhpt.radial.md  pybhpt.redshift.md  pybhpt.swsh.md  pybhpt.teuk.md  requirements.txt
docs/background/: geo.md  radial.md  swsh.md  teuk.md
docs/notebooks/: fluxes.ipynb  geodesics.ipynb  radial.ipynb  swsh.ipynb  teuk.ipynb  tutorial.ipynb  waveform.ipynb
notebooks/: flux-example.ipynb  tutorial.ipynb
parallel_run_scripts/: flux_pybhpt.py  run_flux_log_both_full.py  run_high_ecc.py
pybhpt/: flux.py  geo.py  hertz.py  metric.py  radial.py  redshift.py  swsh.py  teuk.py
pybhpt/geo/: __init__.py
pybhpt/hertz/: __init__.py
pybhpt/radial/: __init__.py
pybhpt/teuk/: __init__.py
test/: .hertz_grid_r0_10.0_gauge_IRG_ptsNum_34_modeNum_496.pkl  .hertz_grid_temp.pkl  huuGen_test1_l.txt  test.ipynb  test.txt_IRG_Yl.txt  test.txt_IRG_Ylm.txt  test.txt_IRG_l.txt  test.txt_IRG_lm.txt  test.txt_ORG_Ylm.txt  test.txt_ORG_l.txt  test.txt_ORG_lm.txt
test-temp/: .hertz_grid_a0_0.0_r0_10.0_gauge_IRG_ptsNum_34_modeNum_136.pkl  .hertz_grid_a0_0.0_r0_10.0_gauge_IRG_ptsNum_34_modeNum_496.pkl  huuGen_test1_lm.txt  metric_construction.ipynb
test/test-temp/: .hertz_grid_a0_0.0_r0_10.0_gauge_IRG_ptsNum_34_modeNum_1681.pkl  .hertz_grid_a0_0.0_r0_10.0_gauge_IRG_ptsNum_34_modeNum_256.pkl  huuGen_test2_l.txt  metricReconstruction.ipynb  test.ipynb  test.txt_ORG_Yl.txt
tests/: test_geo.py  test_radial.py  test_teuk.py
