[build-system]
requires = [
  "cython",
  "numpy",
  "scikit-build-core",
  "cmake>=3.18"
]
build-backend = "scikit_build_core.build"

[project]
name = "pybhpt"
version = "0.9.3"
description = "Black Hole Perturbation Theory and Self-Force Algorithms in Python"
authors = [
  { name = "Zach Nasipak", email = "znasipak@gmail.com" }
]
readme = "README.md"
license = { text = "GPL" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Cython",
  "Programming Language :: C++",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Natural Language :: English"
]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "cython",
  "scikit-build-core"
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.build-type = "Release"
cmake.verbose = true

# Source/package layout
sdist.include = [ "cpp/", "cython/", "CMakeLists.txt" ]
sdist.exclude = [ ".github/", "tutorial*", ".gitignore" ]
wheel.packages = [ "pybhpt" ]
