[build-system]
requires = [
  "cython",
  "numpy",
  "scikit-build-core",
  "cmake>=3.18"
]
build-backend = "scikit_build_core.build"

[project]
name = "pybhpt"
version = "0.9.8"
description = "Black Hole Perturbation Theory and Self-Force Algorithms in Python"
authors = [
  { name = "Zach Nasipak", email = "znasipak@gmail.com" }
]
readme = "README.md"
license = { text = "GPL" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Cython",
  "Programming Language :: C++",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Natural Language :: English"
]
requires-python = ">=3.8"
dependencies = [
  "numpy <= 2.2",
  "scipy"
]

[project.optional-dependencies]
testing = [
  "pytest",
  "pytest-cov"
]
dev = [
  "matplotlib",
  "jupyter",
  "ipython",
  "ipykernel"
]
extended = [
  "pandas",
  "spherical",
  "tqdm"
]

[project.urls]
Github = "https://github.com/znasipak/pybhpt"
"Bug Tracker" = "https://github.com/znasipak/pybhpt/issues"

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.build-type = "Release"
cmake.verbose = true

[tool.scikit-build.sdist]
include = [ "cpp/", "cython/", "CMakeLists.txt" ]
exclude = [ ".github/", "tutorial*", ".gitignore" ]

[tool.scikit-build.wheel]
packages = [ "pybhpt" ]

[tool.pytest.ini_options]
addopts = "--ignore=pybhpt/extern"
norecursedirs = "extern"
